--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -138,15 +138,15 @@
   <footer>
     <section>
       <div>
-        <img src="/Imagenes/logo-x" />
+        <img src="/Imagenes/logo-x.png" />
         <h4>NoHaze_Official</h4>
       </div>
       <div>
-        <img src="/Imagenes/logo-tiktok" />
+        <img src="/Imagenes/tiktok-icon.png" />
         <h4>NoHaze_Ok</h4>
       </div>
       <div>
-        <img src="/Imagenes/logo-instagram" />
+        <img src="/Imagenes/instagram-logo.png" />
         <h4>NoHaze</h4>
       </div>
     </section>
